<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            >

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Harano Jinis Khuje Pai"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:textSize="36dp"
            android:gravity="center"
            android:textColor="@color/app_name_color">

        </TextView>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"
            android:gravity="center"
            android:layout_gravity="center">

        </EditText>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:layout_gravity="center">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/forget_password2"
            android:textStyle="bold"
            android:textColor="@color/black">

        </TextView>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_round"
            android:layout_gravity="center"
            android:textColor="@color/background_color"
            android:text="Login" />

        <Button
            android:id="@+id/login_with_googleBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_round"
            android:layout_gravity="center"
            android:text="@string/sign_in_with_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/create_new_account"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>
</layout>